# CMakeList.txt: CMake-Projekt für "HW3_CPP_KTH". Schließen Sie die Quelle ein, und definieren Sie
# projektspezifische Logik hier.
#
cmake_minimum_required (VERSION 3.8)

project ("HW3_CPP_KTH")

# Fügen Sie der ausführbaren Datei dieses Projekts eine Quelle hinzu.
add_executable (HW3_CPP_KTH "HW3_CPP_KTH.cpp" "HW3_CPP_KTH.h")

# TODO: Fügen Sie bei Bedarf Tests hinzu, und installieren Sie Ziele.
